changed resources to courses hyperlink

--- a/_includes/course-sidebar.html
+++ b/_includes/course-sidebar.html
@@ -8,6 +8,6 @@
     </div></p>
     <hr/>
     <h3>Browse</h3>
-    <a href="{{ 'resources/tag/' | absolute_url }}" class="btn btn--large">Tag</a>
-    <a href="{{ 'resources/year/' | absolute_url }}" class="btn btn--large">Year</a>
+    <a href="{{ 'courses/tag/' | absolute_url }}" class="btn btn--large">Tag</a>
+    <a href="{{ 'courses/year/' | absolute_url }}" class="btn btn--large">Year</a>
    </div>
