--- a/_layouts/course-directory.html
+++ b/_layouts/course-directory.html
@@ -13,7 +13,7 @@ layout: default
 {% endif %}
 
 <div id="main" role="main">
-  {% include resource-sidebar.html %}
+  {% include course-sidebar.html %}
 
   <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
     {% if page.title %}<meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
