--- a/_layouts/single-course.html
+++ b/_layouts/single-course.html
@@ -42,7 +42,7 @@ layout: default
             <p class="page__date"><strong><i class="fas fa-calendar" aria-hidden="true"></i> Updated:</strong> <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time></p>
           {% endif %}
           {% if page.difficulty %}
-            <p class="page__date"><strong><i class="fas fa-graduation-cap" aria-hidden="true"></i> Difficulty</strong>: {{ page.difficulty }}&nbsp;<a href="{{ '/resources/about/#difficulty' | absolute_url }}"><i class="fas fa-info-circle"></i></a></p>
+            <p class="page__date"><strong><i class="fas fa-graduation-cap" aria-hidden="true"></i> Difficulty</strong>: {{ page.difficulty }}&nbsp;<a href="{{ '/courses/about/#difficulty' | absolute_url }}"><i class="fas fa-info-circle"></i></a></p>
           {% endif %}
           {% if page.license %}
           <p class="page__date"><strong><i class="fab fa-creative-commons" aria-hidden="true"></i> License:</strong>
