--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -7,6 +7,9 @@
 <link rel="icon" type="image/png" href="{{ absolute_url }}/assets/images/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="{{ absolute_url }}/assets/images/manifest.json">
 <link rel="mask-icon" href="{{ absolute_url }}/assets/images/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Padauk&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="{{ absolute_url }}/assets/images/favicon.ico">
 <meta name="msapplication-config" content="{{ absolute_url }}/assets/images/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
