--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,11 +2,11 @@
 
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
 
-<link rel="apple-touch-icon" sizes="180x180" href="{{ absolute_url }}/assets/images/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ absolute_url }}/assets/images/favicon-32x32.png">
 <link rel="icon" type="image/png" href="{{ absolute_url }}/assets/images/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="{{ absolute_url }}/assets/images/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="{{ absolute_url }}/assets/images/manifest.json">
-<link rel="mask-icon" href="{{ absolute_url }}/assets/images/safari-pinned-tab.svg" color="#5bbad5">
+<!-- <link rel="mask-icon" href="{{ absolute_url }}/assets/images/safari-pinned-tab.svg" color="#5bbad5"> -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Padauk&display=swap" rel="stylesheet">
