--- a/_includes/state.html
+++ b/_includes/state.html
@@ -9,4 +9,4 @@
 {% elsif page.state == "ready" %}
 <img src="https://img.shields.io/badge/status-ready-brightgreen.svg" alt="page.state">
 {% endif %}
-&nbsp;<a href="{{ '/courses/about/#resource-state' | absolute_url }}"><i class="fa fa-info-circle"></i></a>
+&nbsp;<a href="{{ '/courses/about/#course-state' | absolute_url }}"><i class="fa fa-info-circle"></i></a>
