--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -13,4 +13,5 @@
 <link rel="shortcut icon" href="{{ absolute_url }}/assets/images/favicon.ico">
 <meta name="msapplication-config" content="{{ absolute_url }}/assets/images/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+<a rel="me" href="https://mastodon.online/@alexsnow348">Mastodon</a>
 <!-- end custom head snippets -->
