--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -14,4 +14,13 @@
 <meta name="msapplication-config" content="{{ absolute_url }}/assets/images/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 <link rel="me" href="https://mastodon.online/@alexsnow348">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7B6HM6W1M2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7B6HM6W1M2');
+</script>
 <!-- end custom head snippets -->
