--- a/_layouts/single-course.html
+++ b/_layouts/single-course.html
@@ -11,7 +11,14 @@ layout: default
     {% include breadcrumbs.html %}
   {% endunless %}
 {% endif %}
-
+<style>
+  .container {
+    position: center;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 10%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  }  
+</style>
 <div id="main" role="main">
   {% include sidebar.html %}
 
@@ -20,7 +27,6 @@ layout: default
     {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
     {% if page.date %}<meta itemprop="datePublished" content="{{ page.date | date: "%B %d, %Y" }}">{% endif %}
     {% if page.modified %}<meta itemprop="dateModified" content="{{ page.modified | date: "%B %d, %Y" }}">{% endif %}
-
     <div class="page__inner-wrap">
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
@@ -64,6 +70,10 @@ layout: default
         </div>
         {{ content }}
         {% if page.link %}<div><a href="{{ page.link }}" class="btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
+        <div class="container">
+          <p>နေစဥ် email ကတဆင့် လေ့လာနိုင်ဖို့ Newsletter subscribe လုပ်ထားနိုင်ကြပါပြီး။</p>
+          <iframe src="https://alexsnowschool.substack.com/embed" width="320" height="320" style="border:1px solid #b6bd4f; background:white; position: center;" frameborder="0" scrolling="no"></iframe>
+        </div>
       </section>
       <footer class="page__meta">
         {% if site.data.ui-text[site.locale].meta_label %}
@@ -83,6 +93,7 @@ layout: default
     </div>
 
   </article>
+
 
   {% comment %}<!-- only show related on a post page when not disabled -->{% endcomment %}
   {% if page.id and page.related and site.related_posts.size > 0 %}
@@ -114,5 +125,4 @@ layout: default
     </script>
     <script src="https://hypothes.is/embed.js" async></script>
   {% endif %} -->
-
 </div>
